public/static/style.css
html, body {
  margin: 0;
  padding: 0;
}

body {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center; 
  font-family: Arial, sans-serif;
}

#app {
  display: flex;
  width: 60%;
  flex-direction: column;
  max-width: 100%;    
  box-sizing: border-box;  
  overflow-wrap: break-word; /* ensure text wraps */
}

nav {
  width: 60%;
  display: flex;
  justify-content: flex-start;
  align-items: flex-end; 
  margin-top: 10px;
  /* outline: 1px solid black; */
}

#franzacom {
  position: relative;
  display: inline-block;
}

#franzacom span {
  position: absolute;
  top: 0;
  margin-top: 0px;
  margin-bottom: 0px;
}

a {
  color: black;
}

.projects-list li {
  margin-bottom: 10px;
}

